Lint: use Double.valueOf(…) instead of new Double(…)
Android Lint v. 17